Mon Sep  7 05:21:09 2009  Koichi Sasada  <ko1@atdot.net>

	* Makefile.in, common.mk: move a id.h generation rule.

Mon Sep  7 05:07:59 2009  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: remove RUBY_VERSION output.

Mon Sep  7 05:06:16 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: rename macro name ENABLE_IC_FOR_IVAR
	  to USE_IC_FOR_IVAR.

Mon Sep  7 03:21:40 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.escape): obsoleted.

	* lib/uri/common.rb (URI,unescape): ditto.

Sun Sep  6 18:13:54 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (CALL_SIMPLE_METHOD_IC): make a macro
	  invoke simple method with inline cache entry.

	* insns.def (opt_length, opt_size): fix to use inline method cache.

Sun Sep  6 17:47:21 2009  Koichi Sasada  <ko1@atdot.net>

	* template/id.h.tmpl: fix this.

	* id.h: removed.  Because this file is generated automatically.

Sun Sep  6 17:31:28 2009  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_specialized_instruction), insns.def (opt_size):
	  optimize #size methods (by specialized instruction).

	* id.c, id.h, vm.c, vm_insnhelper.h: ditto.

Sun Sep  6 16:13:06 2009  Koichi Sasada  <ko1@atdot.net>

	* insns.def (setinstancevariable), vm_insnhelper.c (vm_setivar): 
	  fix to use inline cache (trivial optimization).

Sun Sep  6 10:34:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c: fixed rdoc, a patch from Nobuhiro IMAI at [ruby-core:25433].

Sun Sep  6 05:19:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c: Add rdoc for ARGF.
	  contributed by Run Paint Run Run. [ruby-core:23854]

Sat Sep  5 15:21:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): op_asgn to aref should return rhs.
	  [ruby-core:25387]

Sat Sep  5 10:38:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): &&= and ||= should return rhs.
	  [ruby-dev:39163] (#1996), [ruby-core:25143]
